@@ -2,47 +2,53 @@ package employees;
 
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
-import org.modelmapper.TypeToken;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+//import org.slf4j.Logger;
+//import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class EmployeesService {
 
-//    ha lombokot használok, és kiteszem @Slf4j annotációt
+//    ha lombokot használok, és kiteszem @Slf4j annotációt, akkor nem kell
 //    private static final Logger log = LoggerFactory.getLogger(EmployeesService.class)
 
     private ModelMapper modelMapper;
 
     private AtomicLong idGenerator = new AtomicLong();
 
+    private EmployeesDao employeesDao;
+
     private List<Employee> employees = Collections.synchronizedList(new ArrayList<>(List.of(
             new Employee(idGenerator.incrementAndGet(), "John Doe"),
             new Employee(idGenerator.incrementAndGet(), "Jack Doe")
     )));
 
-    public EmployeesService(ModelMapper modelMapper) {
+    public EmployeesService(ModelMapper modelMapper, EmployeesDao employeesDao) {
         this.modelMapper = modelMapper;
+        this.employeesDao = employeesDao;
     }
 
     public List<EmployeeDto> listEmployees(Optional<String> prefix) {
-        Type targetListType = new TypeToken<List<EmployeeDto>>() {
-        }.getType();
-        List<Employee> filtered = employees.stream()
-                .filter(e -> prefix.isEmpty() || e.getName().toLowerCase().startsWith(prefix.get().toLowerCase()))
-                .collect(Collectors.toList());
-        return modelMapper.map(filtered, targetListType);
+        return employeesDao.findAll().stream()
+                .map(e -> modelMapper.map(e, EmployeeDto.class))
+                .toList();
     }
+
+//    public List<EmployeeDto> listEmployees(Optional<String> prefix) {
+//        Type targetListType = new TypeToken<List<EmployeeDto>>() {
+//        }.getType();
+//        List<Employee> filtered = employees.stream()
+//                .filter(e -> prefix.isEmpty() || e.getName().toLowerCase().startsWith(prefix.get().toLowerCase()))
+//                .collect(Collectors.toList());
+//        return modelMapper.map(filtered, targetListType);
+
 
     public EmployeeDto findEmployeeById(long id) {
         Employee employee = getEmployeeById(id);
